Bug 1285207 - Don't let canvas have a DrawTarget without a BufferProvider and keep them in sync. r=lsalzman